# datafarm

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  config.py  core.py  db.py  docker-compose.yml  helpers.py  init.sql  main.py  pyproject.toml  queries.py  req.txt  test.py  utils.py  visual.py  ws_futures.py  ws_spot.py
datafarm/: config_binance.py  core.py  utils.py
service/: config_binance.py  core.py  db.py
src/: config.py  core.py  utils.py
telegram/: helpers.py  templates.py
telegram/handlers/: trading.py  welcome.py
telegram/keyboards/: kb_trading.py  kb_welcome.py
